syntax = "proto3";

package xbasissvc.external.user;

import "konekko.me/xbasis/commons/dto/commons.proto";

service Update {

    rpc Username (UpdateRequest) returns (xbasis.commons.dto.Status);

    rpc RealName (UpdateRequest) returns (xbasis.commons.dto.Status);

    rpc Phone (UpdateRequest) returns (xbasis.commons.dto.Status);

    rpc Email (UpdateRequest) returns (xbasis.commons.dto.Status);

    rpc UserIcon (UpdateRequest) returns (xbasis.commons.dto.Status);

    rpc Password (UpdatePasswordRequest) returns (xbasis.commons.dto.Status);

}

message UpdateRequest {
    string content = 1;
}

message UpdatePasswordRequest {
    string original = 1;
    string new = 2;
}
